src/test/deca/context/invalid/FieldIntrouvable.deca
// Description:
//    field not found
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

class A {
	int x;
	void setX(int b){
		this.x = b;
	}
}

{
	A a = new A();
	int y = a.y;
	
}
